@startuml Domain Model
skinparam style strictuml
skinparam DefaultFontName Roboto
hide empty members

class "User" as User {
  String username
  String password
}

class "Profile" as Profile {
  String lastname
  String firstname
  Date lastLogin
  Boolean isActive
}

class "Organization" as Organization {
  String label
  Boolean queryable
}

User "1" *-- "many" Profile : > Is represented through
Profile "many" *-- "1" Organization : > Is part of
@enduml